improved the homepage design cool with logo implemented at navbar and particle js at background and also the text floating at the right with glowing outline

--- a/views/home.erb
+++ b/views/home.erb
@@ -40,47 +40,48 @@
          <div class="loader"><img src="/images/loading.gif" alt="#" /></div>
       </div>
       <!--Sign-->
-      <div class="sign">
-         <p>Sign up to gain special access to a sneak peek of what our app has to offer!↗</p>
+      <div class="box sign">
+         ↑ Sign up to gain special access to a sneak peek of what our app has to offer!
       </div>
-      <!-- header -->
+      <!--header -->
       <header>
          <!-- header inner -->
-         <div  class="head_top">
-            <div class="header">
-               <div class="container-fluid">
-                  <div class="row">
-                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                        <div class="full">
-                           <div class="center-desk">
-                              <div class="logo">
-                                 <a href="index.html"><img src="images/logo_new.png" alt="#" /></a>
+         <!--<div  class="head_top">-->
+         <!--   <div class="header">-->
+         <!--      <div class="container-fluid">-->
+         <!--         <div class="row">-->
+         <!--            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">-->
+         <!--               <div class="full">-->
+         <!--                  <div class="center-desk">-->
+                              <!--<div class="logo">-->
+                              <!--   <a href="index.html"><img src="images/logo_new.png" alt="#" /></a>-->
+                              <!--</div>-->
+         <!--                  </div>-->
+         <!--               </div>-->
+         <!--            </div>-->
+         <!--         </div>-->
+         <!--      </div>-->
+         <!--   </div>-->
+            <!-- banner -->
+            <div id="particles-js"></div>
+            <div id="wrapper"></div>
+                  <section class="banner_main">
+                     <div class="container">
+                        <div class="row">
+                           <div class="col-md-10 offset-md-1">
+                              <div class="text-img">
+                                 <figure><img src="images/muzarttgraphics.png" alt="#"/></figure>
+                              </div>
+                           </div>
+                           <div class="col-md-12">
+                              <div class="text-bg">
+                                 <h1>A tap away from <br> digital music and art therapy.</h1>
+                                 <a href="#">Read More</a>
                               </div>
                            </div>
                         </div>
                      </div>
-                  </div>
-               </div>
-            </div>
-            <!-- banner -->
-            <section class="banner_main">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-10 offset-md-1">
-                        <div class="text-img">
-                           <figure><img src="images/muzarttgraphics.png" alt="#"/></figure>
-                        </div>
-                     </div>
-                     <div class="col-md-12">
-                        <div class="text-bg">
-                           <h1>A tap away from <br> digital music and art therapy.</h1>
-                           <a href="#">Read More</a>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </section>
-         </div>
+                  </section>
       </header>
       <!-- about -->
       <div class="about">
@@ -356,12 +357,15 @@
             </div>
          </div>
       </footer>
+      <!--Particle.js-->
+      <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/jquery-3.0.0.min.js"></script>
       <script src="js/plugin.js"></script>
+      <script src="js/star.js"></script>
       <!-- sidebar -->
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/custom.js"></script>
