--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,15 +44,62 @@ body {
      font-weight: normal;
 }
 
-.sign p {
+.fluid {
+  width:40vh;/*横幅*/
+  height: 40vh;/*縦幅*/
+  background:#fff100;/*背景色*/
+  animation: fluidrotate 30s ease 0s infinite;/*アニメーションの設定*/
+}
+
+@keyframes fluidrotate {  
+	  
+0%, 100% {
+    border-radius: 63% 37% 54% 46%/55% 48% 52% 45%;
+}
+14% {
+    border-radius: 40% 60% 54% 46%/49% 60% 40% 51%;
+}
+28% {
+    border-radius: 54% 46% 38% 62%/49% 70% 30% 51%;
+}
+42% {
+    border-radius: 61% 39% 55% 45%/61% 38% 62% 39%;
+}
+56% {
+    border-radius: 61% 39% 67% 33%/70% 50% 50% 30%;
+}
+70% {
+    border-radius: 50% 50% 34% 66%/56% 68% 32% 44%;
+}
+84% {
+    border-radius: 46% 54% 50% 50%/35% 61% 39% 65%;
+}
+	  
+}
+
+.box {
+  display: inline-block;
+  width: 300px;
+  height: 150px;
+  background-color: #fff;
+  right: 0;
+  position: fixed;
+  z-index: 100;
+  mix-blend-mode: brighten;
+}
+
+.sign {
      margin-top: 8px;
      font-weight: bold;
      text-align: center;
-     font-size: 35px;
+     font-size: 25px;
      font-family: "Times New Roman", Times, serif;
      font-style: italic;
      text-decoration: underline;
-     color: black;
+     
+     box-shadow:
+          -10px 10px 25px rgba(230, 180, 15, 0.9),
+          10px -10px 25px rgba(8, 131, 161, 0.9)
 }
 
 a {
@@ -322,6 +369,20 @@ position: relative;
      display: block;
      margin-left: auto;
      margin-right: auto;
+}
+
+#particles-js{ 
+	z-index:-1;/*描画を一番下に*/
+	width: 100%;
+	height: 100%;
+	position: fixed;
+}
+
+#wrapper{
+	z-index: 1;/*z-indexの数字を大きくすることで描画を#particles-jsよりも上に*/
+	width:100%;
+	height: 100%;
+	position: fixed;
 }
 
 .banner_main {
